started showcase part

--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
         </nav>
 
         <!-- Showcase -->
+        <header class="showcase">
+            <h2>Surface Deals</h2>
+        </header>
     </div>
     
 
