--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
         <!-- Showcase -->
         <header class="showcase">
             <h2>Surface Deals</h2>
+            <p>Select Surfaces are on sale now - save while supplies last</p>
+            <a href="#" class="btn">
+                Shop Now <!-- To add that greater than sign but is a bit flat --> <i class="fas fa-chevron-right"></i>
+            </a>
         </header>
     </div>
     
