--- a/index.html
+++ b/index.html
@@ -48,6 +48,37 @@
                 Shop Now <!-- To add that greater than sign but is a bit flat --> <i class="fas fa-chevron-right"></i>
             </a>
         </header>
+
+        <!-- Home cards 1 -->
+        <section class="home-cards">
+            <div>
+                <img src="assets/card1.png" alt="">
+                <h3>New Surface Pro 7</h3>
+                <p>See how Katie Sowers, Asst. Coach for the 49ers, uses Surface Pro 7 to put her plans into play.</p>
+                <a href="#">Learn More <i class="fas fa-chevron-right"></i></a>
+            </div>
+
+            <div>
+                <img src="assets/card2.png" alt="">
+                <h3>New Surface Pro 3</h3>
+                <p>Express yourself powerfully with a thin, light, and elegant design, faster performance, and up to 11.5 hours battery life.</p>
+                <a href="#">Learn More <i class="fas fa-chevron-right"></i></a>
+            </div>
+
+            <div>
+                <img src="assets/card3.png" alt="">
+                <h3>Save $150 + free controller</h3>
+                <p>Buy an Xbox One X console and double your fun with a free select extra controller. Starting at $349.</p>
+                <a href="#">Learn More <i class="fas fa-chevron-right"></i></a>
+            </div>
+
+            <div>
+                <img src="assets/card4.png" alt="">
+                <h3>The new Microsoft Edge</h3>
+                <p>Expect more. World class performance, with more privacy, more productivity, and more value.</p>
+                <a href="#">Learn More <i class="fas fa-chevron-right"></i></a>
+            </div>
+        </section>
     </div>
     
 
