--- a/index.html
+++ b/index.html
@@ -90,6 +90,38 @@
                 </a>
             </div>
         </section>
+
+        <!-- Home cards 2 -->
+        <section class="home-cards">
+            <div>
+                <img src="assets/card5.png" alt="">
+                <h3>Microsoft Teams</h3>
+                <p>Unleash the power of your team.</p>
+                <a href="#">SHOP NOW <i class="fas fa-chevron-right"></i></a>
+            </div>
+
+            <div>
+                <img src="assets/card6.jpg" alt="">
+                <h3>Unlock the power of learning</h3>
+                <p>Get students future-ready with Windows 10 devices. Starting at $219.</p>
+                <a href="#">SHOP NOW <i class="fas fa-chevron-right"></i></a>
+            </div>
+
+            <div>
+                <img src="assets/card7.png" alt="">
+                <h3>Windows 10 Enterprise</h3>
+                <p>Download the free 90-day evaluation for IT professionals.</p>
+                <a href="#">DOWNLOAD NOW <i class="fas fa-chevron-right"></i></a>
+            </div>
+
+            <div>
+                <img src="assets/card8.png" alt="">
+                <h3>Explore Kubernetes</h3>
+                <p>Learn how Kubernetes works and get started with cloud native app development today.</p>
+                <a href="#">GET STARTED <i class="fas fa-chevron-right"></i></a>
+            </div>
+        </section>
+        
     </div>
     
 
