--- a/index.html
+++ b/index.html
@@ -121,6 +121,17 @@
                 <a href="#">GET STARTED <i class="fas fa-chevron-right"></i></a>
             </div>
         </section>
+
+        <!-- Carbon -->
+        <section class="carbon">
+            <div class="content">
+                <h2>Commiting To Carbon Negative</h2>
+                <p>Microsoft will be carbon negative by 2030 and by 2050 we will remove all carbon the company has emitted since it was founded in 1975</p>
+                <a href="#" class="btn">
+                    Learn More <i class="fas fas-chevron-right"></i>
+                </a>
+            </div>
+        </section>
         
     </div>
     
