follow html content complete

--- a/index.html
+++ b/index.html
@@ -132,6 +132,14 @@
                 </a>
             </div>
         </section>
+
+        <!-- Follow -->
+        <section class="follow">
+            <p>Follow Microsoft</p>
+            <a href=""><img src="assets/social-fb.png" alt="Facebook"></a>
+            <a href=""><img src="assets/social-twitter.png" alt="Twitter"></a>
+            <a href=""><img src="assets/social-linkedin.png" alt="LinkedIn"></a>
+        </section>
         
     </div>
     
