--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <title>Microsoft - Cloud, Computers, Apps & Gaming</title>
 </head>
 <body>
+    <div class="menu-btn">
+        <i class="fas fa-bars fa-2x"></i>
+    </div>
     <div class="container">
 
         <!-- Nav -->
